fix items background

--- a/neutrino-hd/src/Makefile.am
+++ b/neutrino-hd/src/Makefile.am
@@ -75,6 +75,10 @@ neutrino_LDADD += $(top_builddir)/lib/libeplayer3/libeplayer3.a \
 	-lass
 endif
 
+# LCD display
+neutrino_LDADD += \
+	$(top_builddir)/lib/liblcddisplay/liblcddisplay.a
+
 
 
 
