--- a/trunk/neutrino-hd/lib/liblcddisplay/Makefile.am
+++ b/trunk/neutrino-hd/lib/liblcddisplay/Makefile.am
@@ -3,5 +3,4 @@ noinst_LIBRARIES = liblcddisplay.a
 liblcddisplay_a_SOURCES = lcddisplay.cpp fontrenderer.cpp
 
 AM_CXXFLAGS = \
-	@FREETYPE_CFLAGS@ \
-	@PNG_CFLAGS@
+	@FREETYPE_CFLAGS@
