--- a/trunk/neutrino-hd/src/Makefile.am
+++ b/trunk/neutrino-hd/src/Makefile.am
@@ -71,8 +71,11 @@ neutrino_LDADD = \
 	-ljpeg -lgif -lrt -lpthread -lblkid -ldl -lFLAC -lavformat -lavcodec -lavutil
 
 if ENABLE_LIBEPLAYER3
-neutrino_LDADD += $(top_builddir)/lib/libeplayer3/libeplayer3.a \
-	-lass
+neutrino_LDADD += $(top_builddir)/lib/libeplayer3/libeplayer3.a
+endif
+
+if ENABLE_LIBASS
+	neutrino_LDADD += -lass
 endif
 
 # LCD display
