--- a/neutrino-hd/lib/libcoolstream/Makefile.am
+++ b/neutrino-hd/lib/libcoolstream/Makefile.am
@@ -6,6 +6,7 @@ INCLUDES = \
 	-I$(top_srcdir)/src/zapit/include \
 	-I$(top_srcdir)/src/zapit/include/client \
 	-I$(top_srcdir)/lib/connection \
+	-I$(top_srcdir)/lib/libconfigfile \
 	-I$(top_srcdir)/lib/libeventserver \
 	-I$(top_srcdir)/lib/libeplayer3
 
