--- a/neutrino-hd/src/gui/Makefile.am
+++ b/neutrino-hd/src/gui/Makefile.am
@@ -32,10 +32,10 @@ libneutrino_gui_a_SOURCES = \
 
 libneutrino_gui2_a_SOURCES = \
 	color.cpp motorcontrol.cpp scale.cpp hdd_menu.cpp \
-	alphasetup.cpp colorgainsetup.cpp dvbsub_select.cpp upnpbrowser.cpp
+	alphasetup.cpp dvbsub_select.cpp upnpbrowser.cpp
 
-#libneutrino_gui2_a_SOURCES += \
-#	alphasetup.cpp colorgainsetup.cpp
+libneutrino_gui2_a_SOURCES += \
+	alphasetup.cpp psisetup.cpp
 
 if BOXTYPE_CUBEREVO
 libneutrino_gui2_a_SOURCES += cam_menu.cpp
