show submenus in vfd (optional), an other help bar added to setups menus (optional), minor fixes

--- a/neutrino-hd/data/locale/Makefile.am
+++ b/neutrino-hd/data/locale/Makefile.am
@@ -18,8 +18,7 @@ installdir = $(DATADIR)/neutrino/locale
 
 install_DATA = \
 	deutsch.locale \
-	english.locale \
-	francais.locale
+	english.locale
 
 if MAINTAINER_MODE
 
