--- a/trunk/neutrino-hd/src/driver/Makefile.am
+++ b/trunk/neutrino-hd/src/driver/Makefile.am
@@ -17,6 +17,7 @@ INCLUDES = \
 noinst_LIBRARIES = libneutrino_driver.a libneutrino_driver_netfile.a
 
 libneutrino_driver_a_SOURCES = \
+	abstime.c \
 	ringbuffer.c \
 	encoding.cpp \
 	fontrenderer.cpp \
@@ -36,8 +37,7 @@ libneutrino_driver_a_SOURCES = \
 	genpsi.c \
 	streamts.cpp \
 	radiotext.cpp \
-	radiotools.cpp \
-	abstime.c
+	radiotools.cpp
 
 libneutrino_driver_a_SOURCES += \
 	png.cpp \
