--- a/src/gui/Makefile.am
+++ b/src/gui/Makefile.am
@@ -35,7 +35,7 @@ libneutrino_gui_a_SOURCES = \
 	favorites.cpp sleeptimer.cpp screensetup.cpp \
 	epgview.cpp infoviewer.cpp scan.cpp update.cpp \
 	filebrowser.cpp audioplayer.cpp nfs.cpp pictureviewer.cpp \
-	movieplayer.cpp rc_lock.cpp bookmarkmanager.cpp \
+	movieplayer.cpp rc_lock.cpp \
 	timeosd.cpp epgplus.cpp epg_menu.cpp \
 	streaminfo2.cpp dboxinfo.cpp \
 	plugins.cpp imageinfo.cpp audio_select.cpp moviebrowser.cpp movieinfo.cpp \
