revert last commit

--- a/branches/nhd2-exp/lib/Makefile.am
+++ b/branches/nhd2-exp/lib/Makefile.am
@@ -12,6 +12,11 @@ SUBDIRS = \
 	libupnpclient \
 	libcoolstream
 
+if !ENABLE_GSTREAMER
+SUBDIRS += libeplayer3
+endif
+
+
 if ENABLE_LCD
 SUBDIRS += liblcddisplay
 endif
