update to last version

--- a/trunk/neutrino-hd/lib/Makefile.am
+++ b/trunk/neutrino-hd/lib/Makefile.am
@@ -10,12 +10,15 @@ SUBDIRS = \
 	libtuxtxt \
 	libdvbsub \
 	libupnpclient \
-	liblcddisplay \
 	libcoolstream
 
-# libeplayer3
-if ENABLE_LIBEPLAYER3
+if !ENABLE_GSTREAMER
 SUBDIRS += libeplayer3
+endif
+
+
+if ENABLE_LCD
+SUBDIRS += liblcddisplay
 endif
 
 
