--- a/lib/libcoolstream/Makefile.am
+++ b/lib/libcoolstream/Makefile.am
@@ -12,6 +12,8 @@ INCLUDES = \
 
 if !ENABLE_GSTREAMER
 INCLUDES += -I$(top_srcdir)/lib/libeplayer3/include
+else
+INCLUDES += @GST_CFLAGS@
 endif
 
 noinst_LIBRARIES = libcoolstream.a
