--- a/branches/nhd2-exp/data/config/Makefile.am
+++ b/branches/nhd2-exp/data/config/Makefile.am
@@ -3,6 +3,7 @@ installdir = $(CONFIGDIR)
 install_DATA = \
 	satellites.xml \
 	cables.xml \
-	terrestrial.xml
+	terrestrial.xml \
+	keymap.conf
 
 
