--- a/configure.ac
+++ b/configure.ac
@@ -24,6 +24,7 @@ TUXBOX_APPS_LIB_PKGCONFIG(PNG,libpng)
 TUXBOX_APPS_LIB_PKGCONFIG(AVCODEC,libavcodec)
 TUXBOX_APPS_LIB_PKGCONFIG(AVUTIL,libavutil)
 TUXBOX_APPS_LIB_PKGCONFIG(AVFORMAT,libavformat)
+TUXBOX_APPS_LIB_PKGCONFIG(GST,gstreamer-0.10)
 
 # keybaord
 AC_ARG_ENABLE(keyboard-no-rc,
