--- a/branches/nhd2-exp/lib/libeplayer3/Makefile.am
+++ b/branches/nhd2-exp/lib/libeplayer3/Makefile.am
@@ -14,14 +14,10 @@ libeplayer3_a_SOURCES =  \
 	output/writer/ac3.c output/writer/divx.c output/writer/wma.c output/writer/pes.c \
 	output/writer/dts.c output/writer/mpeg2.c output/writer/mp3.c output/writer/misc.c \
 	output/writer/h264.c output/writer/h263.c output/writer/vc1.c \
-	output/writer/vorbis.c output/writer/flac.c output/writer/pcm.c
-
-#libass
-if ENABLE_LIBASS
-	libeplayer3_a_sources += container/text_srt.c container/text_ssa.c container/container_ass.c \
+	output/writer/vorbis.c output/writer/flac.c output/writer/pcm.c \
+	container/text_srt.c container/text_ssa.c container/container_ass.c \
 	manager/subtitle.c \
 	output/output_subtitle.c output/writer/framebuffer.c
-endif
 
 AM_CFLAGS = -Wall -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -D_LARGEFILE64_SOURCE
 
@@ -34,7 +30,7 @@ AM_CFLAGS += \
 # silence ffmpeg deprecation warnings
 AM_CPPFLAGS = -Dattribute_deprecated=''
 
-LIBEPLAYER3_LIBS = libeplayer3.a -lpthread -lavformat -lavcodec -lavutil -lz -lm -lpng
+LIBEPLAYER3_LIBS = libeplayer3.a -lpthread -lavformat -lavcodec -lavutil -lz -lm -lpng -lass
 
 bin_PROGRAMS = eplayer3 meta
 
