remove default keymap.con file

--- a/branches/nhd2-exp/data/config/Makefile.am
+++ b/branches/nhd2-exp/data/config/Makefile.am
@@ -3,7 +3,6 @@ installdir = $(CONFIGDIR)
 install_DATA = \
 	satellites.xml \
 	cables.xml \
-	terrestrial.xml \
-	keymap.conf
+	terrestrial.xml
 
 
