--- a/branches/nhd2-exp/configure.ac
+++ b/branches/nhd2-exp/configure.ac
@@ -78,6 +78,26 @@ if test "$enable_graphlcd" = "yes"; then
 AC_DEFINE(ENABLE_GRAPHLCD,1,[include graph lcd support])
 fi
 
+# radiotext
+AC_ARG_ENABLE(radiotext,
+	AS_HELP_STRING(--enable-radiotext,include radiotext support),
+	,[enable_radiotext=no])
+AM_CONDITIONAL(ENABLE_RADIOTEXT,test "$enable_radiotext" = "yes")
+
+if test "$enable_radiotext" = "yes"; then
+AC_DEFINE(ENABLE_RADIOTEXT,1,[include graph lcd support])
+fi
+
+# upnp
+AC_ARG_ENABLE(upnp,
+	AS_HELP_STRING(--enable-upnp,include upnp support),
+	,[enable_upnp=no])
+AM_CONDITIONAL(ENABLE_UPNP,test "$enable_upnp" = "yes")
+
+if test "$enable_upnp" = "yes"; then
+AC_DEFINE(ENABLE_UPNP,1,[include upnp support])
+fi
+
 AC_OUTPUT([
 Makefile
 lib/Makefile
