add build flag for upnp (actually upnpbrowser is buggy)

--- a/branches/nhd2-exp/lib/Makefile.am
+++ b/branches/nhd2-exp/lib/Makefile.am
@@ -9,16 +9,18 @@ SUBDIRS = \
 	libxmltree \
 	libtuxtxt \
 	libdvbsub \
-	libupnpclient \
 	libcoolstream
 
 if !ENABLE_GSTREAMER
 SUBDIRS += libeplayer3
 endif
 
-
 if ENABLE_LCD
 SUBDIRS += liblcddisplay
+endif
+
+if ENABLE_UPNP
+SUBDIRS += libupnpclient
 endif
 
 
