opkg manager (dbt)

--- a/branches/nhd2-exp/src/gui/Makefile.am
+++ b/branches/nhd2-exp/src/gui/Makefile.am
@@ -49,7 +49,7 @@ libneutrino_gui_a_SOURCES = \
 
 libneutrino_gui2_a_SOURCES = \
 	color.cpp motorcontrol.cpp hdd_menu.cpp \
-	alphasetup.cpp dvbsub_select.cpp psisetup.cpp
+	alphasetup.cpp dvbsub_select.cpp psisetup.cpp opkg_manager.cpp
 
 if ENABLE_UPNP
 libneutrino_gui2_a_SOURCES += upnpbrowser.cpp
