--- a/branches/nhd2-exp/lib/libdvbsub/Makefile.am
+++ b/branches/nhd2-exp/lib/libdvbsub/Makefile.am
@@ -1,6 +1,7 @@
 INCLUDES = \
 	-I$(top_srcdir)/src/zapit/include \
 	-I$(top_srcdir)/src \
+	-I$(top_srcdir)/lib \
 	-I$(top_srcdir)/lib/libcoolstream \
 	@AVCODEC_CFLAGS@
 
