--- a/branches/nhd2-exp/configure.ac
+++ b/branches/nhd2-exp/configure.ac
@@ -151,5 +151,8 @@ src/timerd/Makefile
 src/zapit/Makefile
 src/zapit/lib/Makefile
 src/zapit/src/Makefile
+src/zapit/include/Makefile
+src/zapit/include/zapit/Makefile
+src/zapit/include/zapit/client/Makefile
 ])
 
