clean up zapit debug

--- a/branches/nhd2-exp/src/zapit/include/zapit/Makefile.am
+++ b/branches/nhd2-exp/src/zapit/include/zapit/Makefile.am
@@ -3,7 +3,7 @@ SUBDIRS = client
 pkgincludedir = ${includedir}/tuxbox/zapit
 pkginclude_HEADERS = \
 	bouquets.h cam.h channel.h \
-	ci.h debug.h descriptors.h dvbstring.h frontend_c.h \
+	ci.h descriptors.h dvbstring.h frontend_c.h \
 	getservices.h nit.h pat.h pmt.h scan.h sdt.h settings.h\
 	transponder.h types.h zapit.h satconfig.h
 
