--- a/lib/libtuxtxt/Makefile.am
+++ b/lib/libtuxtxt/Makefile.am
@@ -1,7 +1,8 @@
 INCLUDES = \
 	-I$(top_srcdir)/src \
         -I$(top_srcdir)/src/zapit/include \
-	-I$(top_srcdir)/lib/libcoolstream
+	-I$(top_srcdir)/lib/libcoolstream \
+	-I$(top_srcdir)/lib/libconfigfile
 
 AM_CPPFLAGS = $(FREETYPE_CFLAGS) -fno-rtti -fno-exceptions
 
