* add boxtype generic (PC) borrowed from neutrino-mp (neutrino-dvbapi) * minor fixes

--- a/branches/nhd2-exp/src/Makefile.am
+++ b/branches/nhd2-exp/src/Makefile.am
@@ -84,6 +84,11 @@ if ENABLE_GRAPHLCD
 neutrino_LDADD += -lglcddrivers -lglcdgraphics -lusb
 endif
 
+if BOXTYPE_GENERIC
+neutrino_LDADD += \
+	-lglut -lGL -lGLU -lGLEW -lOpenThreads
+endif
+
 
 
 
