--- a/branches/nhd2-exp/lib/libtuxtxt/Makefile.am
+++ b/branches/nhd2-exp/lib/libtuxtxt/Makefile.am
@@ -4,7 +4,7 @@ INCLUDES = \
 	-I$(top_srcdir)/lib/libcoolstream \
 	-I$(top_srcdir)/lib/libconfigfile
 
-AM_CPPFLAGS = $(FREETYPE_CFLAGS) -fno-rtti -fno-exceptions
+#AM_CPPFLAGS = $(FREETYPE_CFLAGS) -fno-rtti -fno-exceptions
 
 noinst_LIBRARIES = libtuxtxt.a
 
