--- a/branches/nhd2-exp/src/daemonc/Makefile.am
+++ b/branches/nhd2-exp/src/daemonc/Makefile.am
@@ -1,16 +1,16 @@
-AM_CPPFLAGS = -fno-rtti -fno-exceptions
+#AM_CPPFLAGS = -fno-rtti -fno-exceptions
 
 INCLUDES = \
 	-I$(top_srcdir)/daemons \
 	-I$(top_srcdir)/src \
 	-I$(top_srcdir)/src/zapit/include \
+	-I$(top_srcdir)/lib \
 	-I$(top_srcdir)/lib/libeventserver \
 	-I$(top_srcdir)/lib/libconfigfile \
 	-I$(top_srcdir)/lib/libnet \
 	-I$(top_srcdir)/lib/xmltree \
-	@FREETYPE_CFLAGS@ \
-	-I$(top_srcdir)/lib \
-	-I$(top_srcdir)/lib/libcoolstream
+	-I$(top_srcdir)/lib/libcoolstream \
+	@FREETYPE_CFLAGS@
 
 noinst_LIBRARIES = libneutrino_daemonc.a
 
