--- a/branches/nhd2-exp/src/nhttpd/yhttpd_mods/Makefile.am
+++ b/branches/nhd2-exp/src/nhttpd/yhttpd_mods/Makefile.am
@@ -9,7 +9,7 @@ INCLUDES = \
 	-I$(top_srcdir)/lib/libconfigfile \
 	@FREETYPE_CFLAGS@ 
 
-AM_CPPFLAGS = -fno-rtti -fno-exceptions
+#AM_CPPFLAGS = -fno-rtti -fno-exceptions
 
 noinst_LIBRARIES = libyhttpdmods.a
 
