- fix acinclude.am (patch by max) - add themes (patch by scp) - add tv shot in webif (patch by scp)

--- a/branches/nhd2-exp/data/Makefile.am
+++ b/branches/nhd2-exp/data/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = fonts icons iso-codes locale config inetradio
+SUBDIRS = fonts icons iso-codes locale config inetradio themes
 
 if ENABLE_LCD
 SUBDIRS += lcd
