- rename radio.jpg to radiomode (hope this will fix the build) - add 3dtv servicetypes (this need more work to get the streamtype and compenenttag from SI)

--- a/branches/nhd2-exp/data/icons/Makefile.am
+++ b/branches/nhd2-exp/data/icons/Makefile.am
@@ -40,7 +40,7 @@ install_DATA += \
 
 # background
 install_DATA += \
-	radio.jpg scan.jpg shutdown.jpg start.jpg
+	radiomode.jpg scan.jpg shutdown.jpg start.jpg
 
 
 
