--- a/branches/nhd2-exp/src/gui/Makefile.am
+++ b/branches/nhd2-exp/src/gui/Makefile.am
@@ -24,7 +24,7 @@ INCLUDES = \
 	@CURL_CFLAGS@ \
 	@FREETYPE_CFLAGS@
 
-if !ENABLE_GSTREAMER
+if ENABLE_LIBEPLAYER3
 INCLUDES += -I$(top_srcdir)/lib/libeplayer3/include
 endif
 
