--- a/branches/nhd2-exp/src/zapit/src/Makefile.am
+++ b/branches/nhd2-exp/src/zapit/src/Makefile.am
@@ -9,7 +9,7 @@ INCLUDES = \
 	-I$(top_srcdir)/lib/libxmltree \
 	-I$(top_srcdir)/lib/libcoolstream
 
-if !ENABLE_GSTREAMER
+if ENABLE_LIBEPLAYER3
 INCLUDES += -I$(top_srcdir)/lib/libeplayer3/include
 endif
 
