--- a/branches/nhd2-exp/lib/Makefile.am
+++ b/branches/nhd2-exp/lib/Makefile.am
@@ -8,8 +8,11 @@ SUBDIRS = \
 	libnet \
 	libxmltree \
 	libtuxtxt \
-	libdvbsub \
-	libcoolstream
+	libdvbsub
+
+if !BOXTYPE_COOLSTREAM
+SUBDIRS += libdvbapi
+endif
 
 if ENABLE_LIBEPLAYER3
 SUBDIRS += libeplayer3
