--- a/branches/nhd2-exp/src/zapit/src/Makefile.am
+++ b/branches/nhd2-exp/src/zapit/src/Makefile.am
@@ -6,8 +6,13 @@ INCLUDES = \
 	-I$(top_srcdir)/lib/libconfigfile \
 	-I$(top_srcdir)/lib/connection \
 	-I$(top_srcdir)/lib/libeventserver \
-	-I$(top_srcdir)/lib/libxmltree \
-	-I$(top_srcdir)/lib/libcoolstream
+	-I$(top_srcdir)/lib/libxmltree
+
+if BOXTYPE_COOLSTREAM
+INCLUDES += -I$(top_srcdir)/lib/libcoolstream
+else
+INCLUDES += -I$(top_srcdir)/lib/libdvbapi
+endif
 
 if ENABLE_LIBEPLAYER3
 INCLUDES += -I$(top_srcdir)/lib/libeplayer3/include
