- initial support for webtv (based on martii's nmp webtv)

--- a/branches/nhd2-exp/configure.ac
+++ b/branches/nhd2-exp/configure.ac
@@ -185,6 +185,7 @@ data/lcd/Makefile
 data/lcd/icons/Makefile
 data/lcd/clock/Makefile
 data/themes/Makefile
+data/webtv/Makefile
 src/sectionsd/Makefile
 src/timerd/Makefile
 src/zapit/Makefile
