- add some install/resotore/backup scripts from sct neutrino

--- a/branches/nhd2-exp/data/Makefile.am
+++ b/branches/nhd2-exp/data/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = fonts icons iso-codes locale config inetradio themes webtv
+SUBDIRS = fonts icons iso-codes locale config inetradio themes webtv scripts
 
 if ENABLE_LCD
 SUBDIRS += lcd
