[zapit] shut up all zapit compiler warnings

--- a/branches/nhd2-exp/src/zapit/lib/Makefile.am
+++ b/branches/nhd2-exp/src/zapit/lib/Makefile.am
@@ -6,3 +6,6 @@ INCLUDES = \
 
 noinst_LIBRARIES = libzapitclient.a
 libzapitclient_a_SOURCES = zapitclient.cpp zapittools.cpp
+
+AM_CXXFLAGS = -Werror
+AM_CPPFLAGS = -Werror
