[timerd] -fix compiler warnings

--- a/branches/nhd2-exp/src/timerd/Makefile.am
+++ b/branches/nhd2-exp/src/timerd/Makefile.am
@@ -10,3 +10,6 @@ INCLUDES = \
 noinst_LIBRARIES = libtimerd.a
 
 libtimerd_a_SOURCES = timerd.cpp timermanager.cpp
+
+AM_CPPFLAGS = -Werror
+AM_CXXFLAGS = -Werror
